--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "digger-selector",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "The CSS selector parser used for digger",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "make test"
   },
