--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "url": "https://github.com/binocarlos/digger-selector/issues"
   },
   "devDependencies": {
-    "mocha": "~1.12.0",
-    "should": "~1.2.2"
+    "mocha": "~1.14.0",
+    "mocha-phantomjs": "~3.1.6",
+    "browserify": "*",
+    "should": "~2.1.0"
   }
 }
